--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 script: bundle exec rake test
 services: redis
+before_install:
+  - gem update --system 2.1.11
+  - gem --version
 rvm:
   - 1.8.7
   - 1.9.2
