--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,9 @@ rvm:
   - 1.9.3
   - jruby-18mode
   - jruby-19mode
-  - rbx-18mode
-  - rbx-19mode
+  - rbx
 matrix:
   allow_failures:
     - rvm: jruby-18mode
     - rvm: jruby-19mode
-    - rvm: rbx-18mode
-    - rvm: rbx-19mode
+    - rvm: rbx
